infrastructure/kubernetes/forms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: form-deployment
  labels:
    app: form
spec:
  replicas: 1
  selector:
    matchLabels:
      app: form
  template:
    metadata:
      labels:
        app: form
    spec:
      containers:
        - name: form-container
          image: gcr.io/astute-anagram-303907/form:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: form-service
  labels:
    app: form
spec:
  selector:
    app: form
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
