infrastructure/kubernetes/invoice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invoice-deployment
  labels:
    app: invoice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: invoice
  template:
    metadata:
      labels:
        app: invoice
    spec:
      containers:
        - name: invoice-container
          image: gcr.io/astute-anagram-303907/invoice:0.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: invoice-service
  labels:
    app: invoice
spec:
  selector:
    app: invoice
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
