infrastructure/kubernetes/equipment-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /equipment/$2
    kubernetes.io/ingress.class: nginx
  name: equipment-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: equipment-service
              servicePort: 8080
            path: /equipment/(.*)
