infrastructure/kubernetes/forms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /rental/forms$2
    kubernetes.io/ingress.class: nginx
  name: form-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: form-service
              servicePort: 8080
            path: /rental/forms(.*)
          - backend:
              serviceName: form-service
              servicePort: 8080
            path: /forms(.*)
