infrastructure/kubernetes/invoice-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /invoices$1
    kubernetes.io/ingress.class: nginx
  name: invoice-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: invoice-service
              servicePort: 8080
            path: /invoices(.*)
