infrastructure/kubernetes/register-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /users$1
    kubernetes.io/ingress.class: nginx
  name: register-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: register-service
              servicePort: 8080
            path: /users(.*)
