infrastructure/kubernetes/rental-forms-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /rental/forms$1
    kubernetes.io/ingress.class: nginx
  name: rental-form-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: form-service
              servicePort: 8080
            path: /rental/forms(.*)
