infrastructure/kubernetes/store-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /stores$1
    kubernetes.io/ingress.class: nginx
  name: store-ingress
  namespace: default
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: store-service
              servicePort: 8080
            path: /stores(.*)
